@@ -1,5 +1,7 @@
 package dk.kvalitetsit.hjemmebehandling.service;
 
+import dk.kvalitetsit.hjemmebehandling.model.questionnaire.answers.Answer;
+import dk.kvalitetsit.hjemmebehandling.model.questionnaire.answers.Number;
 import dk.kvalitetsit.hjemmebehandling.constants.PlanDefinitionStatus;
 import dk.kvalitetsit.hjemmebehandling.constants.errors.ErrorDetails;
 import dk.kvalitetsit.hjemmebehandling.fhir.FhirClient;
@@ -9,9 +11,12 @@ import dk.kvalitetsit.hjemmebehandling.fhir.FhirUtils;
 import dk.kvalitetsit.hjemmebehandling.model.CarePlanModel;
 import dk.kvalitetsit.hjemmebehandling.model.FrequencyModel;
 import dk.kvalitetsit.hjemmebehandling.model.PlanDefinitionModel;
-import dk.kvalitetsit.hjemmebehandling.model.QuestionnaireModel;
 import dk.kvalitetsit.hjemmebehandling.model.QuestionnaireWrapperModel;
 import dk.kvalitetsit.hjemmebehandling.model.ThresholdModel;
+import dk.kvalitetsit.hjemmebehandling.model.questionnaire.QuestionnaireModel;
+import dk.kvalitetsit.hjemmebehandling.model.questionnaire.answers.Text;
+import dk.kvalitetsit.hjemmebehandling.model.questionnaire.question.BaseQuestion;
+import dk.kvalitetsit.hjemmebehandling.model.questionnaire.question.Question;
 import dk.kvalitetsit.hjemmebehandling.service.access.AccessValidator;
 import dk.kvalitetsit.hjemmebehandling.service.exception.AccessValidationException;
 import dk.kvalitetsit.hjemmebehandling.service.exception.ErrorKind;
@@ -40,13 +45,12 @@ import java.util.stream.Stream;
 public class PlanDefinitionService extends AccessValidatingService {
     private static final Logger logger = LoggerFactory.getLogger(PlanDefinitionService.class);
 
-    private FhirClient fhirClient;
-    private FhirMapper fhirMapper;
-    private DateProvider dateProvider;
+    private final FhirClient fhirClient;
+    private final FhirMapper fhirMapper;
+    private final DateProvider dateProvider;
 
     public PlanDefinitionService(FhirClient fhirClient, FhirMapper fhirMapper, AccessValidator accessValidator, DateProvider dateProvider) {
         super(accessValidator);
-
         this.fhirClient = fhirClient;
         this.fhirMapper = fhirMapper;
         this.dateProvider = dateProvider;
@@ -69,15 +73,14 @@ public class PlanDefinitionService extends AccessValidatingService {
 
         try {
             return fhirClient.savePlanDefinition(fhirMapper.mapPlanDefinitionModel(planDefinition));
-        }
-        catch(Exception e) {
+        } catch (Exception e) {
             throw new ServiceException("Error saving PlanDefinition", e, ErrorKind.INTERNAL_SERVER_ERROR, ErrorDetails.INTERNAL_SERVER_ERROR);
         }
     }
 
     private void validateReferences(PlanDefinitionModel planDefinition) throws AccessValidationException {
         // Validate questionnaires
-        if(planDefinition.getQuestionnaires() != null && !planDefinition.getQuestionnaires().isEmpty()) {
+        if (planDefinition.getQuestionnaires() != null && !planDefinition.getQuestionnaires().isEmpty()) {
             FhirLookupResult lookupResult = fhirClient.lookupQuestionnairesById(planDefinition.getQuestionnaires().stream().map(qw -> qw.getQuestionnaire().getId().toString()).collect(Collectors.toList()));
             validateAccess(lookupResult.getQuestionnaires());
         }
@@ -98,7 +101,7 @@ public class PlanDefinitionService extends AccessValidatingService {
     public void updatePlanDefinition(String id, String name, PlanDefinitionStatus status, List<String> questionnaireIds, List<ThresholdModel> thresholds) throws ServiceException, AccessValidationException {
         // Look up the questionnaires to verify that they exist, throw an exception in case they don't.
         FhirLookupResult questionnaireResult = fhirClient.lookupQuestionnairesById(questionnaireIds);
-        if(questionnaireResult.getQuestionnaires().size() != questionnaireIds.size()) {
+        if (questionnaireResult.getQuestionnaires().size() != questionnaireIds.size()) {
             throw new ServiceException("Could not look up questionnaires to update!", ErrorKind.BAD_REQUEST, ErrorDetails.QUESTIONNAIRES_MISSING_FOR_CAREPLAN);
         }
 
@@ -108,7 +111,7 @@ public class PlanDefinitionService extends AccessValidatingService {
         // Look up the plan definition to verify that it exist, throw an exception in case it don't.
         String qualifiedId = FhirUtils.qualifyId(id, ResourceType.PlanDefinition);
         FhirLookupResult planDefinitionResult = fhirClient.lookupPlanDefinition(qualifiedId);
-        if(planDefinitionResult.getPlanDefinitions().isEmpty()) {
+        if (planDefinitionResult.getPlanDefinitions().isEmpty()) {
             throw new ServiceException("Could not look up plan definitions to update!", ErrorKind.BAD_REQUEST, ErrorDetails.PLANDEFINITION_DOES_NOT_EXIST);
         }
         PlanDefinition planDefinition = planDefinitionResult.getPlanDefinition(qualifiedId).get();
@@ -119,9 +122,9 @@ public class PlanDefinitionService extends AccessValidatingService {
         PlanDefinitionModel planDefinitionModel = fhirMapper.mapPlanDefinition(planDefinition, planDefinitionResult);
 
         // if questionnaire(s) has been removed, validate that they're not in use
-        List<String> currentQuestionnaires = planDefinitionModel.getQuestionnaires().stream().map(q -> q.getQuestionnaire().getId().toString()).collect(Collectors.toList());
+        List<String> currentQuestionnaires = planDefinitionModel.getQuestionnaires().stream().map(q -> q.getQuestionnaire().getId().toString()).toList();
         boolean aQuestionnaireWasRemoved = currentQuestionnaires.stream()
-            .anyMatch(questionnaireId -> !questionnaireIds.contains(questionnaireId));
+                .anyMatch(questionnaireId -> !questionnaireIds.contains(questionnaireId));
 
         if (aQuestionnaireWasRemoved) {
             var activeCarePlansWithQuestionnaire = fhirClient.lookupActiveCarePlansWithPlanDefinition(qualifiedId).getCarePlans();
@@ -132,13 +135,13 @@ public class PlanDefinitionService extends AccessValidatingService {
         }
 
         // if new questionnaire(s) has been added, validate that they're not in use
-        List<String> newQuestionnaires = questionnaireIds.stream().filter(qId -> !currentQuestionnaires.contains(qId)).collect(Collectors.toList());
+        List<String> newQuestionnaires = questionnaireIds.stream().filter(qId -> !currentQuestionnaires.contains(qId)).toList();
         if (!newQuestionnaires.isEmpty()) {
             FhirLookupResult carePlanResult = fhirClient.lookupActiveCarePlansWithPlanDefinition(qualifiedId);
             boolean newQuestionnaireInActiveUse = carePlanResult.getCarePlans().stream()
-                .map(carePlan -> fhirMapper.mapCarePlan(carePlan, carePlanResult))
-                .flatMap(carePlanModel -> carePlanModel.getQuestionnaires().stream().map(questionnaireWrapperModel -> questionnaireWrapperModel.getQuestionnaire().getId()))
-                .anyMatch(questionnaireId -> newQuestionnaires.contains(questionnaireId.toString()));
+                    .map(carePlan -> fhirMapper.mapCarePlan(carePlan, carePlanResult))
+                    .flatMap(carePlanModel -> carePlanModel.getQuestionnaires().stream().map(questionnaireWrapperModel -> questionnaireWrapperModel.getQuestionnaire().getId()))
+                    .anyMatch(questionnaireId -> newQuestionnaires.contains(questionnaireId.toString()));
 
             if (newQuestionnaireInActiveUse) {
                 throw new ServiceException(String.format("A questionnaire with id %s if used by active careplans!", newQuestionnaires), ErrorKind.BAD_REQUEST, ErrorDetails.QUESTIONNAIRE_IS_IN_ACTIVE_USE_BY_CAREPLAN);
@@ -149,8 +152,8 @@ public class PlanDefinitionService extends AccessValidatingService {
 
         // Update carePlan
         List<QuestionnaireModel> questionnaires = questionnaireResult.getQuestionnaires().stream()
-            .map(q -> fhirMapper.mapQuestionnaire(q))
-            .collect(Collectors.toList());
+                .map(fhirMapper::mapQuestionnaire)
+                .collect(Collectors.toList());
         updatePlanDefinitionModel(planDefinitionModel, name, status, questionnaires, thresholds);
 
         // Save the updated PlanDefinition
@@ -161,12 +164,12 @@ public class PlanDefinitionService extends AccessValidatingService {
         if (!newQuestionnaires.isEmpty()) {
             // get new questionnaires as list. We are going to add theese to each active careplan that references the edited plandefinition
             List<QuestionnaireModel> newQuestionnaireList = questionnaires.stream()
-                .filter(q -> newQuestionnaires.contains(q.getId().toString()))
-                .collect(Collectors.toList());
+                    .filter(q -> newQuestionnaires.contains(q.getId().toString()))
+                    .toList();
 
             // get careplans we are adding the questionnaire(s) to
             FhirLookupResult carePlanResult = fhirClient.lookupActiveCarePlansWithPlanDefinition(qualifiedId);
-            carePlanResult.getCarePlans().stream().forEach(carePlan -> {
+            carePlanResult.getCarePlans().forEach(carePlan -> {
                 CarePlanModel carePlanModel = fhirMapper.mapCarePlan(carePlan, carePlanResult);
 
                 // loop quesitonnaires and add
@@ -204,11 +207,11 @@ public class PlanDefinitionService extends AccessValidatingService {
                 QuestionnaireWrapperModel wrapper = new QuestionnaireWrapperModel();
                 wrapper.setQuestionnaire(questionnaire);
 
-                List<ThresholdModel> questionnaireThresholds = new ArrayList<>();
-                questionnaireThresholds.addAll(questionnaire.getQuestions().stream()
-                    .filter(questionModel -> Objects.nonNull(questionModel.getThresholds()))
-                    .flatMap(q -> q.getThresholds().stream())
-                    .collect(Collectors.toList()));
+                List<ThresholdModel> questionnaireThresholds = questionnaire.getQuestions()
+                        .stream()
+                        .filter(questionModel -> Objects.nonNull(questionModel.getThresholds()))
+                        .flatMap(q -> q.getThresholds().stream())
+                        .toList();
 
                 wrapper.setThresholds(questionnaireThresholds);
 
@@ -220,7 +223,7 @@ public class PlanDefinitionService extends AccessValidatingService {
         // update thresholds
         if (thresholds != null && !thresholds.isEmpty()) {
             // if no questionnaires is beeing updated, the threshold may be present already, remove it if it exists
-            Set<String> linkIdUpdates = thresholds.stream().map(t -> t.getQuestionnaireItemLinkId()).collect(Collectors.toSet());
+            Set<String> linkIdUpdates = thresholds.stream().map(ThresholdModel::getQuestionnaireItemLinkId).collect(Collectors.toSet());
             planDefinitionModel.getQuestionnaires().forEach(qw -> {
                 qw.getThresholds().removeIf(t -> linkIdUpdates.contains(t.getQuestionnaireItemLinkId()));
             });
@@ -229,53 +232,50 @@ public class PlanDefinitionService extends AccessValidatingService {
             for (ThresholdModel thresholdModel : thresholds) {
                 // add the new threshold to the correct quesionnaire containing the question (by linkId)
                 Optional<QuestionnaireWrapperModel> questionnaireWrapperModel = planDefinitionModel.getQuestionnaires().stream()
-                    .filter(qw -> {
-                        return qw.getQuestionnaire().getQuestions().stream()
-                            .anyMatch(q -> q.getLinkId().equals(thresholdModel.getQuestionnaireItemLinkId()));
-                    })
-                    .findFirst();
+                        .filter(qw -> {
+                            return qw.getQuestionnaire().getQuestions().stream()
+                                    .anyMatch(q -> q.getLinkId().equals(thresholdModel.getQuestionnaireItemLinkId()));
+                        })
+                        .findFirst();
 
-                if (questionnaireWrapperModel.isPresent()) {
-                    questionnaireWrapperModel.get().getThresholds().add(thresholdModel);
-                }
+                questionnaireWrapperModel.ifPresent(wrapperModel -> wrapperModel.getThresholds().add(thresholdModel));
             }
 
         }
     }
 
-  public void retirePlanDefinition(String id) throws ServiceException {
-      String qualifiedId = FhirUtils.qualifyId(id, ResourceType.PlanDefinition);
-      FhirLookupResult lookupResult = fhirClient.lookupPlanDefinition(qualifiedId);
+    public void retirePlanDefinition(String id) throws ServiceException {
+        String qualifiedId = FhirUtils.qualifyId(id, ResourceType.PlanDefinition);
+        FhirLookupResult lookupResult = fhirClient.lookupPlanDefinition(qualifiedId);
 
-      Optional<PlanDefinition> planDefinition = lookupResult.getPlanDefinition(qualifiedId);
-      if (!planDefinition.isPresent()) {
-          throw new ServiceException(String.format("Could not lookup plandefinition with id %s!", qualifiedId), ErrorKind.BAD_REQUEST, ErrorDetails.PLANDEFINITION_DOES_NOT_EXIST);
-      }
+        Optional<PlanDefinition> planDefinition = lookupResult.getPlanDefinition(qualifiedId);
+        if (planDefinition.isEmpty()) {
+            throw new ServiceException(String.format("Could not lookup plandefinition with id %s!", qualifiedId), ErrorKind.BAD_REQUEST, ErrorDetails.PLANDEFINITION_DOES_NOT_EXIST);
+        }
 
-      var activeCarePlansWithPlanDefinition = fhirClient.lookupActiveCarePlansWithPlanDefinition(qualifiedId).getCarePlans();
-      if (!activeCarePlansWithPlanDefinition.isEmpty()) {
-          throw new ServiceException(String.format("Plandefinition with id %s if used by active careplans!", qualifiedId), ErrorKind.BAD_REQUEST, ErrorDetails.PLANDEFINITION_IS_IN_ACTIVE_USE_BY_CAREPLAN);
-      }
+        var activeCarePlansWithPlanDefinition = fhirClient.lookupActiveCarePlansWithPlanDefinition(qualifiedId).getCarePlans();
+        if (!activeCarePlansWithPlanDefinition.isEmpty()) {
+            throw new ServiceException(String.format("Plandefinition with id %s if used by active careplans!", qualifiedId), ErrorKind.BAD_REQUEST, ErrorDetails.PLANDEFINITION_IS_IN_ACTIVE_USE_BY_CAREPLAN);
+        }
 
-      PlanDefinition retiredPlanDefinition = planDefinition.get().setStatus(Enumerations.PublicationStatus.RETIRED);
-      fhirClient.updatePlanDefinition(retiredPlanDefinition);
-  }
+        PlanDefinition retiredPlanDefinition = planDefinition.get().setStatus(Enumerations.PublicationStatus.RETIRED);
+        fhirClient.updatePlanDefinition(retiredPlanDefinition);
+    }
 
     public List<CarePlanModel> getCarePlansThatIncludes(String planDefinitionId) throws ServiceException {
         String qualifiedId = FhirUtils.qualifyId(planDefinitionId, ResourceType.PlanDefinition);
 
         FhirLookupResult lookupResult = fhirClient.lookupPlanDefinition(qualifiedId);
 
-        if(lookupResult.getPlanDefinitions().isEmpty()) {
+        if (lookupResult.getPlanDefinitions().isEmpty()) {
             throw new ServiceException(String.format("Could not find plandefinition with tht requested id: %s", qualifiedId), ErrorKind.BAD_REQUEST, ErrorDetails.PLANDEFINITION_DOES_NOT_EXIST);
         }
 
         lookupResult.merge(fhirClient.lookupActiveCarePlansWithPlanDefinition(qualifiedId));
         return lookupResult.getCarePlans().stream()
-            .map(carePlan -> fhirMapper.mapCarePlan(carePlan, lookupResult))
-            .collect(Collectors.toList());
+                .map(carePlan -> fhirMapper.mapCarePlan(carePlan, lookupResult))
+                .collect(Collectors.toList());
     }
-
 
 
 }
